added dtb in defconfigs for new rpi boards

--- a/configs/recalbox-rpi1_defconfig
+++ b/configs/recalbox-rpi1_defconfig
@@ -34,7 +34,7 @@ BR2_LINUX_KERNEL_DEFCONFIG="bcmrpi"
 BR2_LINUX_KERNEL_CONFIG_FRAGMENT_FILES="board/recalbox/kernel-4.1-defconfig-fragment.config"
 BR2_LINUX_KERNEL_ZIMAGE=y
 BR2_LINUX_KERNEL_DTS_SUPPORT=y
-BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2708-rpi-b bcm2708-rpi-b-plus"
+BR2_LINUX_KERNEL_INTREE_DTS_NAME="bcm2708-rpi-b bcm2708-rpi-b-plus bcm2708-rpi-cm bcm2708-rpi-0-w"
 BR2_LINUX_KERNEL_PATCH="board/recalbox/kernel_patches_4.1"
 BR2_PACKAGE_BUSYBOX_CONFIG_FRAGMENT_FILES="board/recalbox/busybox-fragment.config"
 BR2_PACKAGE_ALSA_UTILS=y
