--- a/package/recalbox-system/rpi2/recalbox.conf
+++ b/package/recalbox-system/rpi2/recalbox.conf
@@ -15,6 +15,9 @@
 ;system.power.switch=PIN356ONOFFRESET    # https://github.com/recalbox/recalbox-os/wiki/Add-a-start-stop-button-to-your-recalbox-(EN)
 ;system.power.switch=PIN356PUSHRESET     # https://github.com/recalbox/recalbox-os/wiki/Add-a-start-stop-button-to-your-recalbox-(EN)
 
+# Uncomment to enable custom GPIO script feature
+;system.rpi.gpio=enable
+
 ## fbcp FrameBuffer Copy Program
 ## For small TFT screen on GPIO and SPI
 ## See https://github.com/recalbox/recalbox-os/wiki/Utility---Use-of-fbcp-for-small-TFT-screen-%28EN%29 for details
