--- a/configs/recalbox-rpi3_defconfig
+++ b/configs/recalbox-rpi3_defconfig
@@ -163,6 +163,7 @@ BR2_PACKAGE_KBD=y
 BR2_PACKAGE_LINUXCONSOLETOOLS=y
 BR2_PACKAGE_LIRC_TOOLS=y
 BR2_PACKAGE_PARTED=y
+BR2_PACKAGE_RPI_USERLAND=y
 BR2_PACKAGE_USBMOUNT=y
 BR2_PACKAGE_USBUTILS=y
 BR2_PACKAGE_NODEJS=y
