--- a/configs/recalbox-rpi3_defconfig
+++ b/configs/recalbox-rpi3_defconfig
@@ -174,6 +174,7 @@ BR2_PACKAGE_PYTHON_PYGAME=y
 BR2_PACKAGE_PYTHON_PYGAME_IMAGE=y
 BR2_PACKAGE_PYTHON_PYGAME_FONT=y
 BR2_PACKAGE_LIBZIP=y
+BR2_PACKAGE_SNAPPY=y
 BR2_PACKAGE_CA_CERTIFICATES=y
 BR2_PACKAGE_LIBOPENSSL_BIN=y
 BR2_PACKAGE_X264=y
