--- a/configs/recalbox-rpi2_defconfig
+++ b/configs/recalbox-rpi2_defconfig
@@ -174,7 +174,9 @@ BR2_TARGET_ROOTFS_EXT2_LABEL="RECALBOX"
 BR2_TARGET_ROOTFS_EXT2_SIZE="2G"
 BR2_TARGET_ROOTFS_EXT2_MKFS_OPTIONS="-O ^64bit -b 4096 -U 9c7b2218-a4be-431c-900c-733cb0382b28"
 BR2_TARGET_ROOTFS_TAR_XZ=y
+BR2_PACKAGE_HOST_DOSFSTOOLS=y
 BR2_PACKAGE_HOST_GENIMAGE=y
+BR2_PACKAGE_HOST_MTOOLS=y
 BR2_PACKAGE_BLUEZ5_UTILS_GATTTOOL=y
 BR2_PACKAGE_RECALBOX_SYSTEM=y
 BR2_PACKAGE_RECALBOX_THEMES=y
