--- a/Config.in
+++ b/Config.in
@@ -133,6 +133,7 @@ menu "Libretro Cores"
         source "$BR2_EXTERNAL_RECALBOX_PATH/package/libretro-hatari/Config.in"
         source "$BR2_EXTERNAL_RECALBOX_PATH/package/libretro-quicknes/Config.in"
         source "$BR2_EXTERNAL_RECALBOX_PATH/package/libretro-mupen64plus/Config.in"
+                source "$BR2_EXTERNAL_RECALBOX_PATH/package/libretro-mupen64plus-nx/Config.in"
         source "$BR2_EXTERNAL_RECALBOX_PATH/package/libretro-snes9x/Config.in"
         source "$BR2_EXTERNAL_RECALBOX_PATH/package/libretro-vice/Config.in"
         source "$BR2_EXTERNAL_RECALBOX_PATH/package/libretro-handy/Config.in"
