chore(supermodel): add in defconfig_x86-64

--- a/configs/recalbox-x86_64_defconfig
+++ b/configs/recalbox-x86_64_defconfig
@@ -339,6 +339,7 @@ BR2_PACKAGE_LIBRETRO_TIC80=y
 BR2_PACKAGE_LIBRETRO_BEETLE_SATURN=y
 BR2_PACKAGE_LIBRETRO_YABASANSHIRO=y
 BR2_PACKAGE_LIBRETRO_YABAUSE=y
+BR2_PACKAGE_SUPERMODEL=y
 BR2_PACKAGE_MEGATOOLS=y
 BR2_PACKAGE_JSTEST2=y
 BR2_PACKAGE_LIBRETRO_CHEATS=y
