--- a/configs/recalbox-x86_defconfig
+++ b/configs/recalbox-x86_defconfig
@@ -265,6 +265,7 @@ BR2_PACKAGE_SIMCOUPE=y
 BR2_PACKAGE_DOSBOX=y
 BR2_PACKAGE_HYPSEUS=y
 BR2_PACKAGE_REICAST_OLD=y
+BR2_PACKAGE_LIBRETRO_FLYCAST=y
 BR2_PACKAGE_LIBRETRO_UZEM=y
 BR2_PACKAGE_LIBRETRO_UAE=y
 BR2_PACKAGE_LIBRETRO_SNES9X2005=y
@@ -338,6 +339,7 @@ BR2_PACKAGE_LIBRETRO_TIC80=y
 BR2_PACKAGE_LIBRETRO_BEETLE_SATURN=y
 BR2_PACKAGE_LIBRETRO_YABASANSHIRO=y
 BR2_PACKAGE_LIBRETRO_YABAUSE=y
+BR2_PACKAGE_LIBRETRO_KRONOS=y
 BR2_PACKAGE_MEGATOOLS=y
 BR2_PACKAGE_JSTEST2=y
 BR2_PACKAGE_LIBRETRO_CHEATS=y
