--- a/configs/recalbox-x86_64_defconfig
+++ b/configs/recalbox-x86_64_defconfig
@@ -4,6 +4,7 @@ BR2_SHARED_STATIC_LIBS=y
 BR2_GLOBAL_PATCH_DIR="$(BR2_EXTERNAL_RECALBOX_PATH)/board/recalbox/patches $(BR2_EXTERNAL_RECALBOX_PATH)/board/recalbox/x86/patches"
 BR2_TOOLCHAIN_BUILDROOT_GLIBC=y
 BR2_GCC_VERSION_7_X=y
+BR2_GCC_ENABLE_OPENMP=y
 BR2_GCC_ENABLE_LTO=y
 BR2_BINUTILS_ENABLE_LTO=y
 BR2_TOOLCHAIN_BUILDROOT_CXX=y
