--- a/package/libretro-flycast/Config.in
+++ b/package/libretro-flycast/Config.in
@@ -2,6 +2,7 @@ config BR2_PACKAGE_LIBRETRO_FLYCAST
 	bool "libretro-flycast"
 	depends on BR2_PACKAGE_RETROARCH
 	depends on BR2_INSTALL_LIBSTDCPP
+	depends on BR2_GCC_ENABLE_OPENMP
 	select BR2_PACKAGE_RECALBOX_ROMFS_ATOMISWAVE
 	select BR2_PACKAGE_RECALBOX_ROMFS_DREAMCAST
 	select BR2_PACKAGE_RECALBOX_ROMFS_NAOMI
