--- a/configs/recalbox-rpi3_defconfig
+++ b/configs/recalbox-rpi3_defconfig
@@ -223,6 +223,7 @@ BR2_PACKAGE_SIMCOUPE=y
 BR2_PACKAGE_DOSBOX=y
 BR2_PACKAGE_HYPSEUS=y
 BR2_PACKAGE_REICAST=y
+BR2_PACKAGE_LIBRETRO_FLYCAST=y
 BR2_PACKAGE_LIBRETRO_UZEM=y
 BR2_PACKAGE_LIBRETRO_UAE=y
 BR2_PACKAGE_LIBRETRO_SNES9X2002=y
