chore: miserable typo and yabasanshiro on xu4

--- a/package/recalbox-system/xu4/recalbox.conf
+++ b/package/recalbox-system/xu4/recalbox.conf
@@ -341,6 +341,7 @@ global.translate.to=auto
 ## Default cores for Odroid XU4
 snes.core=snes9x2010
 n64.core=gliden64
+saturn.core=yabasanshiro
 
 ## NeoGeo emulator 
 ## You can use pifba or a libretro core (fba2x,libretro)
