chore(citra): add recalbox romf package
chore(citra): remove cubeb for ffmpeg audio and video decoder

- bump remove fmt dependencies and add netplay setting
chore(citra): bump to nightly-1372

- correct package Config.in
- bump and add liblodepng
- correct missing directory
chore(citra): add patch for fix path data and config

- rename folder citra-emu to 3ds in saves and bump citra

--- a/package/recalbox-romfs/recalbox-romfs/Config.in
+++ b/package/recalbox-romfs/recalbox-romfs/Config.in
@@ -3,6 +3,7 @@ config BR2_PACKAGE_RECALBOX_ROMFS
 	default y
 	depends on 	  BR2_PACKAGE_RECALBOX_ROMFS_2048 \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_3DO \
+	  || BR2_PACKAGE_RECALBOX_ROMFS_3DS \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_64DD \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_AMIGA1200 \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_AMIGA600 \
