--- a/package/recalbox-romfs/recalbox-romfs/Config.in
+++ b/package/recalbox-romfs/recalbox-romfs/Config.in
@@ -93,6 +93,7 @@ config BR2_PACKAGE_RECALBOX_ROMFS
 	  || BR2_PACKAGE_RECALBOX_ROMFS_SUPERGRAFX \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_THOMSON \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_TIC80 \
+	  || BR2_PACKAGE_RECALBOX_ROMFS_TOMBRAIDER \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_UZEBOX \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_VECTREX \
 	  || BR2_PACKAGE_RECALBOX_ROMFS_VIRTUALBOY \
