chore(citra): add citra on verion nightly-1311

--- a/Config.in
+++ b/Config.in
@@ -100,6 +100,8 @@ menu "Emulators"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/vice/Config.in"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/solarus-recalbox/Config.in"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/supermodel/Config.in"
+         source "$BR2_EXTERNAL_RECALBOX_PATH/package/citra-emu/Config.in"
+
 
 if BR2_PACKAGE_RETROARCH
 menu "Libretro Cores"
