chore(citra): change to citra qt and change repository
- patch for disable popup message on first boot 


chore(citra): add netplay config in recalbox conf

- add birthday in recalbox conf month day  
chore(citra): update recalbox romfs 


chore(citra): fix romfs bump to nightly-1549 and add hotkey patch 




fix hotkey

--- a/configs/recalbox-x86_64_defconfig
+++ b/configs/recalbox-x86_64_defconfig
@@ -146,6 +146,8 @@ BR2_PACKAGE_QT5=y
 BR2_PACKAGE_QT5BASE_GUI=y
 BR2_PACKAGE_QT5BASE_WIDGETS=y
 BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
+# BR2_PACKAGE_QT5BASE_WIDGETS=y
+BR2_PACKAGE_PCRE_16=y
 BR2_PACKAGE_XORG7=y
 BR2_PACKAGE_XSERVER_XORG_SERVER=y
 BR2_PACKAGE_XAPP_SETXKBMAP=y
@@ -316,6 +318,7 @@ BR2_PACKAGE_RESIDUALVM=y
 BR2_PACKAGE_RETROARCH=y
 BR2_PACKAGE_SCUMMVM=y
 BR2_PACKAGE_SUPERMODEL=y
+BR2_PACKAGE_SIMCOUPE=y
 BR2_PACKAGE_LIBRETRO_81=y
 BR2_PACKAGE_LIBRETRO_2048=y
 BR2_PACKAGE_LIBRETRO_ATARI800=y
