--- a/configs/recalbox-x86_defconfig
+++ b/configs/recalbox-x86_defconfig
@@ -132,6 +132,9 @@ BR2_PACKAGE_MESA3D_VULKAN_DRIVER_INTEL=y
 BR2_PACKAGE_MESA3D_OPENGL_GLX=y
 BR2_PACKAGE_MESA3D_OPENGL_EGL=y
 BR2_PACKAGE_SDL_X11=y
+BR2_PACKAGE_PCRE_16=y
+BR2_PACKAGE_QT5BASE_DEFAULT_QPA="xcb"
+BR2_PACKAGE_MESA3D_OPENGL_TEXTURE_FLOAT=y
 BR2_PACKAGE_SDL_IMAGE_XPM=y
 BR2_PACKAGE_SDL_MIXER=y
 BR2_PACKAGE_SDL_NET=y
@@ -304,6 +307,7 @@ BR2_PACKAGE_RESIDUALVM=y
 BR2_PACKAGE_RETROARCH=y
 BR2_PACKAGE_SCUMMVM=y
 BR2_PACKAGE_SOLARUS_RECALBOX=y
+BR2_PACKAGE_CITRA_EMU=y
 BR2_PACKAGE_LIBRETRO_81=y
 BR2_PACKAGE_LIBRETRO_2048=y
 BR2_PACKAGE_LIBRETRO_ATARI800=y
