--- a/Config.in
+++ b/Config.in
@@ -32,6 +32,7 @@ menu "Recalbox"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/recalbox-configgen/Config.in"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/recalbox-initramfs/Config.in"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/recalbox-manager2/Config.in"
+         source "$BR2_EXTERNAL_RECALBOX_PATH/package/recalbox-manager3/Config.in"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/recalbox-mplayer/Config.in"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/recalbox-romfs/Config.in"
          source "$BR2_EXTERNAL_RECALBOX_PATH/package/recalbox-system/Config.in"
