--- a/configs/recalbox-x86_64_defconfig
+++ b/configs/recalbox-x86_64_defconfig
@@ -270,6 +270,7 @@ BR2_PACKAGE_RECALBOX_BOOTIA32=y
 BR2_PACKAGE_RECALBOX_CONFIGGEN=y
 BR2_PACKAGE_RECALBOX_INITRAMFS=y
 BR2_PACKAGE_RECALBOX_MANAGER2=y
+BR2_PACKAGE_RECALBOX_MANAGER3=y
 BR2_PACKAGE_RECALBOX_MPLAYER=y
 BR2_PACKAGE_NVIDIA_DRIVER_390_RECALBOX=y
 BR2_PACKAGE_NVIDIA_DRIVER_390_RECALBOX_CUDA=y
