--- a/configs/recalbox-x86_defconfig
+++ b/configs/recalbox-x86_defconfig
@@ -267,6 +267,7 @@ BR2_PACKAGE_PYTHON_AUTOBREADCRUMBS=y
 BR2_PACKAGE_RECALBOX_CONFIGGEN=y
 BR2_PACKAGE_RECALBOX_INITRAMFS=y
 BR2_PACKAGE_RECALBOX_MANAGER2=y
+BR2_PACKAGE_RECALBOX_MANAGER3=y
 BR2_PACKAGE_RECALBOX_MPLAYER=y
 BR2_PACKAGE_RECALBOX_SYSTEM=y
 BR2_PACKAGE_RECALBOX_TARGET_X86=y
