feat(ipfs): add IPFS on Pi3, Pi4, XU4 and PC (disabled by default)

--- a/configs/recalbox-rpi4_defconfig
+++ b/configs/recalbox-rpi4_defconfig
@@ -341,3 +341,4 @@ BR2_PACKAGE_XKEYBOARD_CONFIG=y
 BR2_PACKAGE_RPI_USERLAND_TOOLS=y
 BR2_PACKAGE_MPV=y
 BR2_PACKAGE_JOYCOND=y
+BR2_PACKAGE_GO_IPFS=y
