--- a/.gitignore
+++ b/.gitignore
@@ -29,3 +29,5 @@ dist
 
 # this is (over)written by `recaldocker.sh` or `.gitlab-ci.yml`
 /board/recalbox/fsoverlay/recalbox/recalbox.version
+
+package/kernelfirmwares/001_linux_15khz.patch
